# poetry-dotenv-plugin

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
poetry_dotenv_plugin/: dotenv_plugin.py
tests/: test_poetry_dotenv_plugin.py  test_poetry_dotenv_plugin_integration.py  test_poetry_dotenv_plugin_system.py  test_system.sh
